--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,9 @@
 
 	<groupId>com.servicelibre</groupId>
 	<artifactId>servicelibre-parent</artifactId>
-	<packaging>pom</packaging>
 	<version>1-SNAPSHOT</version>
+
+	<packaging>pom</packaging>
 
 	<name>Service Libre</name>
 	<description>
@@ -49,22 +50,49 @@
 			<url>http://repo1.maven.org/maven2/</url>
 		</repository>
 		<repository>
-			<id>jxsl-repo</id>
-			<url>https://jxsl.googlecode.com/svn/maven2/releases</url>
+			<id>java-net</id>
+			<url>http://download.java.net/maven/2/</url>
 		</repository>
+		<repository>
+			<id>xebia-france</id>
+			<url>http://xebia-france.googlecode.com/svn/repository/maven2/</url>
+		</repository>
+		<repository>
+			<id>jxsl-repo</id>
+			<name>jxsl repository</name>
+			<url>https://jxsl.googlecode.com/svn/maven2/releases</url>
+		</repository>		
 	</repositories>
+	
+	<pluginRepositories>
+		<pluginRepository>
+			<id>mc-release</id>
+			<name>maven-license-plugin repository</name>
+			<url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
+			<releases> </releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
 
-	<!--<properties>
+	<properties>
+		<distMgmtSnapshotsName>Service Libre Snapshot Repository</distMgmtSnapshotsName>
+		<distMgmtSnapshotsUrl>dav:https://web-corpus.googlecode.com/svn/maven2/snapshots</distMgmtSnapshotsUrl>
+		<organization.logo>http://www.servicelibre.com/logo.png</organization.logo>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sourceReleaseAssemblyDescriptor>source-release</sourceReleaseAssemblyDescriptor>
+
 		<saxon.version>9.3.0.2j</saxon.version>
 		<lucene.version>3.0.3</lucene.version>
 		<ehcache.version>1.6.2</ehcache.version>
-<!-\-		<ehcache.version>2.2.0</ehcache.version>-\->
 		<logback.version>0.9.26</logback.version>
 		<slf4j.version>1.6.1</slf4j.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<spring-security.version>3.0.5.RELEASE</spring-security.version>
-		<jdk.version>1.6</jdk.version>
-	</properties>-->
+		<poi-version>3.5-FINAL</poi-version>
+		<ooo-version>3.1.0</ooo-version>
+	</properties>
 
 	<dependencyManagement>
 		<dependencies>
@@ -85,6 +113,16 @@
 				<version>1.4.2</version>
 			</dependency>
 			<dependency>
+				<groupId>javax.activation</groupId>
+				<artifactId>activation</artifactId>
+				<version>1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>2.4</version>
+			</dependency>
+			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>5.1.6</version>
@@ -94,7 +132,183 @@
 				<artifactId>commons-dbcp</artifactId>
 				<version>1.2.2</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi</artifactId>
+				<version>${poi-version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi-scratchpad</artifactId>
+				<version>${poi-version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.openoffice</groupId>
+				<artifactId>juh</artifactId>
+				<version>${ooo-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openoffice</groupId>
+				<artifactId>jurt</artifactId>
+				<version>${ooo-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openoffice</groupId>
+				<artifactId>ridl</artifactId>
+				<version>${ooo-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openoffice</groupId>
+				<artifactId>unoil</artifactId>
+				<version>${ooo-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.4</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-core</artifactId>
+				<version>${lucene.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-queries</artifactId>
+				<version>${lucene.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-analyzers</artifactId>
+				<version>${lucene.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.apache</groupId>
+						<artifactId>poi-scratchpad</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>${spring.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>1.1</version>
+				<exclusions>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>commons-cli</groupId>
+				<artifactId>commons-cli</artifactId>
+				<version>1.2</version>
+			</dependency>
+
+			<!-- Logging -->
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>log4j-over-slf4j</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-core</artifactId>
+				<version>${logback.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>${logback.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>jaxen</groupId>
+				<artifactId>jaxen</artifactId>
+				<version>1.1.1</version>
+				<exclusions>
+					<exclusion>
+						<groupId>xom</groupId>
+						<artifactId>xom</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>dom4j</groupId>
+				<artifactId>dom4j</artifactId>
+				<version>1.6.1</version>
+			</dependency>
+			<dependency>
+				<groupId>net.sf.ehcache</groupId>
+				<artifactId>ehcache</artifactId>
+				<version>${ehcache.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>1.4</version>
+			</dependency>
+
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>5.1.12</version>
+			</dependency>
+
+			<dependency>
+				<groupId>hsqldb</groupId>
+				<artifactId>hsqldb</artifactId>
+				<version>1.8.0.7</version>
+			</dependency>
+
+
+			<dependency>
+				<groupId>com.servicelibre</groupId>
+				<artifactId>common-lib</artifactId>
+				<version>1.0.0-SNAPSHOT</version>
+			</dependency>
 		</dependencies>
+
 
 	</dependencyManagement>
 
@@ -123,8 +337,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>2.3.2</version>
 					<configuration>
-						<source>1.4</source>
-						<target>1.4</target>
+						<source>1.6</source>
+						<target>1.6</target>
 						<encoding>${project.build.sourceEncoding}</encoding>
 					</configuration>
 				</plugin>
@@ -178,6 +392,11 @@
 					<version>2.5</version>
 				</plugin>
 				<plugin>
+					<groupId>com.mycila.maven-license-plugin</groupId>
+					<artifactId>maven-license-plugin</artifactId>
+					<version>1.8.0</version>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-plugin-plugin</artifactId>
 					<version>2.7</version>
@@ -225,6 +444,11 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.7.2</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.1-beta-1</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins/>
@@ -244,14 +468,6 @@
 			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
 	</distributionManagement>
-
-	<properties>
-		<distMgmtSnapshotsName>Service Libre Snapshot Repository</distMgmtSnapshotsName>
-		<distMgmtSnapshotsUrl>dav:https://web-corpus.googlecode.com/svn/maven2/snapshots</distMgmtSnapshotsUrl>
-		<organization.logo>http://www.servicelibre.com/logo.png</organization.logo>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sourceReleaseAssemblyDescriptor>source-release</sourceReleaseAssemblyDescriptor>
-	</properties>
 
 	<scm>
 		<connection>scm:svn:http://web-corpus.googlecode.com/svn</connection>
