--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -17,7 +15,7 @@
 
 	<groupId>com.servicelibre</groupId>
 	<artifactId>servicelibre-parent</artifactId>
-	<version>1-SNAPSHOT</version>
+	<version>1</version>
 
 	<packaging>pom</packaging>
 
@@ -31,7 +29,7 @@
 			<name>GNU General Public License, Version 3.0</name>
 			<url>http://www.gnu.org/licenses/gpl.txt</url>
 			<distribution>repo</distribution>
-			<comments/>
+			<comments />
 		</license>
 	</licenses>
 
@@ -451,7 +449,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<plugins/>
+		<plugins />
 	</build>
 
 	<distributionManagement>
@@ -470,9 +468,9 @@
 	</distributionManagement>
 
 	<scm>
-		<connection>scm:svn:http://web-corpus.googlecode.com/svn</connection>
-		<developerConnection>scm:svn:https://web-corpus.googlecode.com/svn</developerConnection>
-		<url>http://code.google.com/p/web-corpus/source/browse</url>
+		<connection>scm:svn:http://web-corpus.googlecode.com/svn/tags/servicelibre-parent-1</connection>
+		<developerConnection>scm:svn:https://web-corpus.googlecode.com/svn/tags/servicelibre-parent-1</developerConnection>
+		<url>http://code.google.com/p/web-corpus/source/browse/tags/servicelibre-parent-1</url>
 	</scm>
 
 	<reporting>
