--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +17,7 @@
 
 	<groupId>com.servicelibre</groupId>
 	<artifactId>servicelibre-parent</artifactId>
-	<version>2-SNAPSHOT</version>
+	<version>1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
@@ -29,7 +31,7 @@
 			<name>GNU General Public License, Version 3.0</name>
 			<url>http://www.gnu.org/licenses/gpl.txt</url>
 			<distribution>repo</distribution>
-			<comments />
+			<comments/>
 		</license>
 	</licenses>
 
@@ -449,7 +451,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<plugins />
+		<plugins/>
 	</build>
 
 	<distributionManagement>
