--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -53,6 +53,26 @@
 		</developer>
 	</developers>
 
+
+	<distributionManagement>
+		<repository>
+			<id>web-corpus</id>
+			<name>Alternate Maven repository of releases</name>
+			<url>dav:https://web-corpus.googlecode.com/svn/maven2/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>web-corpus-snapshots</id>
+			<name>Alternate Maven repository of snapshots</name>
+			<url>dav:https://web-corpus.googlecode.com/svn/maven2/snapshots</url>
+			<uniqueVersion>false</uniqueVersion>
+		</snapshotRepository>
+		<site>
+			<id>web-corpus-website</id>
+			<name>web-corpus website</name>
+			<url>file://${basedir}/target/dist/site</url>
+		</site>
+	</distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
