--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
 	<groupId>com.servicelibre</groupId>
 	<artifactId>servicelibre-parent</artifactId>
-	<version>1</version>
+	<version>2-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
@@ -468,9 +468,9 @@
 	</distributionManagement>
 
 	<scm>
-		<connection>scm:svn:http://web-corpus.googlecode.com/svn/tags/servicelibre-parent-1</connection>
-		<developerConnection>scm:svn:https://web-corpus.googlecode.com/svn/tags/servicelibre-parent-1</developerConnection>
-		<url>http://code.google.com/p/web-corpus/source/browse/tags/servicelibre-parent-1</url>
+		<connection>scm:svn:http://web-corpus.googlecode.com/svn/trunk</connection>
+		<developerConnection>scm:svn:https://web-corpus.googlecode.com/svn/trunk</developerConnection>
+		<url>http://code.google.com/p/web-corpus/source/browse/trunk</url>
 	</scm>
 
 	<reporting>
