--- a/pom.xml
+++ b/pom.xml
@@ -312,6 +312,13 @@
 
 
 	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-webdav</artifactId>
+				<version>1.0-beta-2</version>
+			</extension>
+		</extensions>
 		<pluginManagement>
 			<plugins>
 				<!-- set versions of common plugins for reproducibility, ordered alphabetically -->
