--- a/servicelibre-parent/pom.xml
+++ b/servicelibre-parent/pom.xml
@@ -15,7 +15,7 @@
 
 	<groupId>com.servicelibre</groupId>
 	<artifactId>servicelibre-parent</artifactId>
-	<version>3</version>
+	<version>4-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
@@ -443,9 +443,9 @@
 	</distributionManagement>
 
 	<scm>
-		<connection>scm:svn:http://web-corpus.googlecode.com/svn/tags/servicelibre-parent-3</connection>
-		<developerConnection>scm:svn:https://web-corpus.googlecode.com/svn/tags/servicelibre-parent-3</developerConnection>
-		<url>http://code.google.com/p/web-corpus/source/browse/tags/servicelibre-parent-3</url>
+		<connection>scm:svn:http://web-corpus.googlecode.com/svn/trunk/servicelibre-parent</connection>
+		<developerConnection>scm:svn:https://web-corpus.googlecode.com/svn/trunk/servicelibre-parent</developerConnection>
+		<url>http://code.google.com/p/web-corpus/source/browse/trunk/servicelibre-parent</url>
 	</scm>
 
 	<reporting>
