--- a/servicelibre-parent/pom.xml
+++ b/servicelibre-parent/pom.xml
@@ -88,6 +88,11 @@
 				<version>2.4</version>
 			</dependency>
 			<dependency>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>3.2</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi</artifactId>
 				<version>${poi-version}</version>
