--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>com.servicelibre</groupId>
 	<artifactId>corpus</artifactId>
-	<version>0.5.0-SNAPSHOT</version>
+	<version>0.6.0-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
@@ -88,7 +88,7 @@
 			<id>web-corpus-snapshots</id>
 			<name>Alternate Maven repository of snapshots</name>
 			<url>dav:https://web-corpus.googlecode.com/svn/maven2/snapshots</url>
-			<uniqueVersion>false</uniqueVersion>
+			<uniqueVersion>true</uniqueVersion>
 		</snapshotRepository>
 		<site>
 			<id>web-corpus-website</id>
@@ -369,13 +369,6 @@
 		</dependency>
 
 	<!-- TODO move to Google code web-corpus/common-->
-		<dependency>
-			<groupId>com.servicelibre</groupId>
-			<artifactId>common-lib</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
