--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -229,8 +229,7 @@
 			<resource>
 				<directory>${basedir}/src/main/resources</directory>
 				<includes>
-					<include>predefined-queries.xml</include>
-					<include>applicationContext.xml</include>
+					<include>**/*.xml</include>
 				</includes>
 				<filtering>false</filtering>
 			</resource>
@@ -381,18 +380,7 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jpa</artifactId>
-			<version>2.0.8</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-<!-- 		<dependency> -->
-<!--     <groupId>org.apache.openjpa</groupId> -->
-<!--     <artifactId>openjpa-persistence</artifactId> -->
-<!--     <version>2.1.0</version> -->
-<!-- </dependency> -->
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -414,13 +402,22 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+	
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-hibernate3</artifactId>
-			<version>2.0.8</version>
-			<type>jar</type>
+			<artifactId>spring-orm</artifactId>
+			<version>3.0.5.RELEASE</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>3.0.5.RELEASE</version>
+			<type>pom</type>
 			<scope>compile</scope>
 		</dependency>
+
 	</dependencies>
 
 
