--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -402,13 +402,12 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>3.0.5.RELEASE</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -417,6 +416,13 @@
 			<type>pom</type>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>1.0.0.M2</version>
+		</dependency>
+
 
 	</dependencies>
 
