--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -424,6 +424,12 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.0.1</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 
