première tentative jqgrid

--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -403,6 +403,17 @@
 			<scope>compile</scope>
 		</dependency>
 
+<!--    <dependency> -->
+<!--       <groupId>org.eclipse.persistence</groupId> -->
+<!--       <artifactId>eclipselink</artifactId> -->
+<!--       <version>2.0.1</version> -->
+<!-- </dependency> -->
+<!-- <dependency> -->
+<!--     <groupId>org.apache.openjpa</groupId> -->
+<!--     <artifactId>openjpa</artifactId> -->
+<!--     <version>2.1.0</version> -->
+<!-- </dependency> -->
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
