gestion des conditions (graphie commence par, finit par, etc.) début d'implémentation des filtres utilisation du data binding (live data) + ROD

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -184,6 +184,9 @@
 				<version>6.1.24</version>
 				<configuration>
 					<contextPath>/</contextPath>
+					<systemProperties>
+						<systemProperty><name>corpus.log.dir</name><value>${basedir}/target</value></systemProperty>
+					</systemProperties>
 				</configuration>
 			</plugin>
 
