Recherche des contextes pour des mots et des lemmes (toutes leurs formes)

--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -227,6 +227,13 @@
 				<filtering>true</filtering>
 			</resource>
 			<resource>
+				<directory>${basedir}/src/main/resources/unfiltered</directory>
+				<includes>
+					<include>*</include>
+				</includes>
+				<filtering>false</filtering>
+			</resource>
+			<resource>
 				<directory>${basedir}/src/main/resources</directory>
 				<includes>
 					<include>**/*.xml</include>
