--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -19,8 +20,7 @@
 	<name>corpus</name>
 	<description>Code library for textual corpus management</description>
 
-	<properties>
-	</properties>
+	<properties> </properties>
 
 	<organization>
 		<name>Service Libre</name>
