Utilisation de CharMatcher (Guava - Google) en lieu et place de String.trim() Police affichage api via CSS

--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -20,7 +19,8 @@
 	<name>corpus</name>
 	<description>Code library for textual corpus management</description>
 
-	<properties> </properties>
+	<properties>
+	</properties>
 
 	<organization>
 		<name>Service Libre</name>
@@ -455,6 +455,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.0.1</version>
 			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>r09</version>
 		</dependency>
 	</dependencies>
 
