Authentification fonctionnelle (régression version Spring 3.0.6 vers 3.0.5 / bug «One Bad Credentials forever Bad Credentials», traduction message d'erreur, logging Spring security, uniformisation version Spring via servicelibre-parent)

--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -392,7 +392,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>3.0.5.RELEASE</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -444,11 +443,11 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
-			<version>1.0.0.M2</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.data</groupId> -->
+<!-- 			<artifactId>spring-data-jpa</artifactId> -->
+<!-- 			<version>1.0.0.M2</version> -->
+<!-- 		</dependency> -->
 
 
 		<dependency>
