--- a/web/pom.xml
+++ b/web/pom.xml
@@ -230,6 +230,7 @@
 				<directory>${basedir}/src/main/resources</directory>
 				<includes>
 					<include>**/*.xml</include>
+					<include>**/*.properties</include>
 				</includes>
 				<filtering>false</filtering>
 			</resource>
@@ -271,18 +272,15 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>3.0.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-			<version>3.0.5.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>3.0.6.RELEASE</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -291,13 +289,32 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>3.0.6.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>3.0.6.RELEASE</version>
+		</dependency>
+
+		<!-- Spring Security -->
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 
 
@@ -371,59 +388,42 @@
 			<scope>compile</scope>
 		</dependency>
 
-
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-			<version>3.0.6.RELEASE</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-web</artifactId>
-			<version>3.0.6.RELEASE</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>3.0.6.RELEASE</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
-			<version>3.0.6.RELEASE</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-ldap</artifactId>
-			<version>3.0.6.RELEASE</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
+
 		<dependency>
 			<groupId>org.zkoss.spring</groupId>
 			<artifactId>zkspring-security</artifactId>
 			<version>3.0</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>		
+		</dependency>
+
+
+
+		<!-- <dependency> -->
+		<!-- <groupId>org.slf4j</groupId> -->
+		<!-- <artifactId>slf4j-log4j12</artifactId> -->
+		<!-- <version>1.5.6</version> -->
+		<!-- <type>jar</type> -->
+		<!-- <scope>compile</scope> -->
+		<!-- </dependency> -->
+
 	</dependencies>
 
-	<!-- sudo keytool -import -trustcacerts -alias maven-zk-ee-certificate -file ~/tmp/ZKOSS_root_CA.crt -keystore /etc/java-6-sun/security/cacerts -->
-<!-- Ajouter dans ~/.m2/settings.xml (via Profile)-->
-<!-- 	<repositories> -->
-<!-- 	   <repository> -->
-<!-- 	     <id>zk-ee</id> -->
-<!-- 	     <url>https://maven.zkoss.org/repo/zk/ee</url> -->
-<!-- 	   </repository> -->
-<!-- 	 </repositories> -->
+	<!-- sudo keytool -import -trustcacerts -alias maven-zk-ee-certificate -file 
+		~/tmp/ZKOSS_root_CA.crt -keystore /etc/java-6-sun/security/cacerts -->
+	<!-- Ajouter dans ~/.m2/settings.xml (via Profile) -->
+	<!-- <repositories> -->
+	<!-- <repository> -->
+	<!-- <id>zk-ee</id> -->
+	<!-- <url>https://maven.zkoss.org/repo/zk/ee</url> -->
+	<!-- </repository> -->
+	<!-- </repositories> -->
 
 	<profiles>
 		<profile>
